--- a/wwwroot/css/cursos.css
+++ b/wwwroot/css/cursos.css
@@ -36,19 +36,52 @@
     color: rgb(117, 117, 117);
 }
 
-.footer{
-    font-size: .85rem;
-    text-transform: uppercase;
-    font-weight: 600;
-	position:absolute;
-    bottom:5px;
-    left:10px;
-	
+.footer-precio{
+  color:  #0fbcf9;
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: center;
 }
 
-.regular a{
-    text-decoration: none;
-    outline: none;
+.card a{
+  text-decoration: none;
+  outline: none;
+}
+
+.carrito-btn, .info-btn{
+  color: #0fbcf9;
+  text-align: center;
+  padding: 8px;
+  border-radius: 15px;
+  position: absolute;
+  bottom: 10px;
+  transition: .2s linear;
+}
+
+.fa-shopping-cart{
+  margin-right: 5px;
+}
+
+.carrito-btn{
+  margin: 0 4px;
+  left: 0;
+
+}
+
+.info-btn{
+  margin: 0 4px;
+  right: 0;
+}
+
+.carrito-btn:hover, .info-btn:hover{
+  background-color: #0fbcf9;
+  color: white;
+}
+
+.btn-footer{
+  display: flex;
+  justify-content: space-between;
 }
 
 .slider {
