--- a/Views/Home/Cursos.cshtml
+++ b/Views/Home/Cursos.cshtml
@@ -19,7 +19,7 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                        <a href="#" class="carrito-btn col-md-6" id="agregar-carrito"><i class="fas fa-shopping-cart"></i>AGREGAR</a>
+                                        <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
                                         <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
@@ -42,7 +42,7 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                    <a href="" class="carrito-btn col-md-6" id="agregar-carrito"><i class="fas fa-shopping-cart"></i>AGREGAR</a>
+                                    <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
                                     <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
@@ -65,7 +65,7 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                    <a href="#" class="carrito-btn col-md-6" id="agregar-carrito"><i class="fas fa-shopping-cart"></i>AGREGAR</a>
+                                    <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
                                     <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                    <a href="#" class="carrito-btn col-md-6" id="agregar-carrito"><i class="fas fa-shopping-cart"></i>AGREGAR</a>
+                                    <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
                                     <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
@@ -97,28 +97,7 @@
                     }
                 }
             </section>    
-
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-	
-	
+            
 @section Scripts{
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ==" crossorigin="anonymous"></script>
 }
