--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Digital_Scilicet
 @using Digital_Scilicet.Models
+@using Cursos.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
