Agregado API Youtube
La lista de cursos se ve usando, haciendo una consulta a la API de youtube y pidiendo los vídeos del ID de una lista de reproducción que se guardó al crear el curso (faltan los estilos del view).

--- a/Views/Home/MisCursos.cshtml
+++ b/Views/Home/MisCursos.cshtml
@@ -13,7 +13,7 @@
                     <img src="~/img/imgDatos.jpg" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">@cursos.Titulo</h5>
-                        <a href="">EMPEZAR CURSO</a>
+                        <a href="/home/VerCurso/@cursos.ID">EMPEZAR CURSO</a>
                     </div>
                 </div>
             </div>
