--- a/Views/Home/NuevoCurso.cshtml
+++ b/Views/Home/NuevoCurso.cshtml
@@ -6,6 +6,7 @@
     <input type="text" class="contact-form-text" name="nombre" placeholder="Nombre del curso">
     <input type="text" class="contact-form-text" name="precio" placeholder="Precio del curso">
     <input type="text" class="contact-form-text" name="categoria" placeholder="Categoria del curso">
+    <input type="text" class="contact-form-text" name="url" placeholder="Url del video">
     <textarea class="contact-form-text" maxlength="100" name="descripcion" placeholder="Descripción del curso"></textarea>
     <input type="submit" class="contact-form-btn" value="Crear">
   </form>
