--- a/wwwroot/css/vercurso.css
+++ b/wwwroot/css/vercurso.css
@@ -1,39 +1,65 @@
-.container {
-  width: 560px;
-  background-color: #fff;
-  margin: 0 auto;
+#video iframe{
+
+  width: 100%;
+  height: 526px;
 }
 
-
-
-.logo {
-  width: 120px;
-  padding: 10px;
+#lista-videos{
+  
 }
 
-main {
-  padding: 370px 18px 10px;
-}
-
-article {
-  display: -webkit-box;
+.material-curso{
   display: flex;
-  -webkit-box-align: center;
-          align-items: center;
-  padding: 8px 12px;
-  border: 2px solid white;
-  border-radius: 8px;
-  margin: 0 auto;
-}
-article:hover {
-  border: 2px solid #ff9999;
 }
 
-.thumb {
-  height: 70px;
-  border-radius: 4px;
+.item{
+  display: flex;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in;
+  transition-delay: 0.3s;
 }
 
-.details {
-  padding: 8px 22px;
+.item img{
+  width: 150px;
+  height: 100px;
+}
+
+.details{
+  text-align: left;
+  margin-left: 1rem;
+}
+
+.details h4{
+  font-size: 1rem;
+}
+
+.details p{
+  color:  #6e767f;
+  font-size: .9rem;
+}
+
+.about-curso{
+  padding: 0 100px;
+}
+
+.header-content{
+  font-size: 1.3rem;
+  font-weight: 600;
+  text-align: left;
+}
+
+.margin-text{
+  margin-left: 20%;
+}
+
+
+.titulos-display{
+  display: flex;
+}
+
+
+@media (max-width: 767px){
+  .material-curso{
+    display: block;
+  }
 }
