Se agregaron mensajes de error y exito
Se chequearon errores de:
*Si se está creando un curso con un nombre o url que ya existe.
*Mensaje de password/username incorrectos en login
*Chequear que usuario ya tenga el curso
*Mensaje tras haber comprado un curso

--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,6 +3,10 @@
     
 }
 
+@{
+    bool errorCredenciales = (ViewBag.errorCredenciales != null);
+}
+
         <p class="sign" align="center">Iniciar sesión</p>
         <div class="main">
             
@@ -14,6 +18,10 @@
                 <div class="form-group">
                     <input type="password" class="pass" name="password" placeholder="Password"/>
                 </div>
+                @if(errorCredenciales)
+                {
+                    <p class="error-credenciales">El usuario y/o contraseña que ingresaste son incorrectos.</p>
+                }
                 <button type="submit" class="submit" align="center">Login</button>
             </form>
         </div>
