--- a/Views/Home/Nosotros.cshtml
+++ b/Views/Home/Nosotros.cshtml
@@ -35,31 +35,35 @@
 
 <section>
     <hr>
-    <div class="row">
-        <div class="col-md-6 col-sm-12 chicaEstudiando"></div>
 
-        <div class="col-md-6 col-sm-12 lineasAprovechar">
-            <p class="tituloAprovechar">APROVECHÁ LAS OPORTUNIDADES QUE TE BRINDAMOS</p>
-            <p class="subtituloAprovechar"><b>Utiliza nuestra plataforma para ver los cursos que quieras, desde donde quieras y a la hora que quieras.</b></p>
-            <p class="textoAprovechar">Desde Digital Scilicet promulgamos autodidactismo como método de aprendizaje, ya que en el rubro de la programación este
-                atributo es muy recurrente. Nosotros te vamos a dar las bases y vos por tu cuenta vas a interiorizarte.
-            </p>
+        <div class="estudiando-content">
+            <div class="chicaEstudiando"></div>
+
+            <div class="lineasAprovechar">
+                <p class="tituloAprovechar">APROVECHÁ LAS OPORTUNIDADES QUE TE BRINDAMOS</p>
+                <p class="subtituloAprovechar"><b>Utiliza nuestra plataforma para ver los cursos que quieras, desde donde quieras y a la hora que quieras.</b></p>
+                <p class="textoAprovechar">Desde Digital Scilicet promulgamos autodidactismo como método de aprendizaje, ya que en el rubro de la programación este
+                    atributo es muy recurrente. Nosotros te vamos a dar las bases y vos por tu cuenta vas a interiorizarte.
+                </p>
+            </div>
         </div>
-    </div>
+
 </section>
-
+  <hr>
 <section>
-    <div class="row">
 
-        <div class="col-md-6 col-sm-12 lineasProfesor">
-            <p class="tituloProfesor">CONTÁ CON ASISTENCIA EN CUALQUIER MOMENTO</p>
-            <p class="subtituloProfesor"><b>Utilizá las oportunidades que te brindamos para socabar todas tus dudas.</b></p>
-            <p class="textoProfesor">Contamos con profesionales de alto nivel que pueden ayudarte sobre cualquier duda que tengas sobre tu curso.
-            </p>
+
+        <div class="profesor">
+            <div class="lineasProfesor">
+              <p class="tituloProfesor">CONTÁ CON ASISTENCIA EN CUALQUIER MOMENTO</p>
+              <p class="subtituloProfesor"><b>Utilizá las oportunidades que te brindamos para socabar todas tus dudas.</b></p>
+              <p class="textoProfesor">Contamos con profesionales de alto nivel que pueden ayudarte sobre cualquier duda que tengas sobre tu curso.
+              </p>
+          </div>
+
+          <div class="profesorExplicando"></div>
         </div>
 
-        <div class="col-md-6 col-sm-12 profesorExplicando"></div>
-    </div>
 </section>
 
 <hr>
