--- a/Views/Shared/_LayoutWithUser.cshtml
+++ b/Views/Shared/_LayoutWithUser.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -39,28 +39,13 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contacto">Contacto</a>
                         </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Deslogear">Log Out</a>
-                                </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Deslogear">Log Out</a>
+                        </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MisCursos">Mis Cursos</a>
-                                </li>
-                           
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
-                                </li> 
-
-
-
-                        
-                       
-
-                        
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MisCursos">Mis Cursos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
