--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
+@using Microsoft.AspNetCore.Http
+
 @{
-    Layout = "_Layout";
+    string user = this.Context.Session.GetString("UsuarioLogueado");
+
+    if(string.IsNullOrEmpty(user))
+        Layout = "_LayoutWithoutUser";
+    else
+        Layout = "_LayoutWithUser";
 }
