--- a/Views/Home/NuevoCurso.cshtml
+++ b/Views/Home/NuevoCurso.cshtml
@@ -13,6 +13,7 @@
     <input type="text" class="contact-form-text" name="precio" placeholder="Precio del curso" required>
     <input type="text" class="contact-form-text" name="url" placeholder="Url del video" required>
     <input type="text" class="contact-form-text" name="cantidad" placeholder="Cantidad de videos" required>
+    <input type="text" class="contact-form-text" name="autor" placeholder="Nombre del autor del curso" required>
     <div class="custom-select" style="width:200px;">
           <select name="categoria" required>
           <option value="1">Base de Datos</option>
