--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -20,6 +20,15 @@
                 <div class="form-group">
                     <input class="pass" type="password" name="password" placeholder="Contraseña"/>
                 </div>
-                <button type="submit" class="submit" align="center">Register</button>
+
+                <div class="check-group">
+                    <input name="chec" type="checkbox" id="chec" onchange="comprobar();"/>
+                    <label for="chec">Si sos administrador activá y colocá la clave.</label>
+                </div>
+
+                <div class="form-group">
+                     <input class="un " name="claveadmin" id="boton" placeholder="Clave de administrador" readonly />
+                </div>
+                <button type="submit" class="submit" align="center">Registrarse</button>
             </form>
         </div>
