--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -103,6 +103,10 @@ a {
     color: red;
 }
 
+.check-group{
+    text-align: center;
+}
+
 @media (max-width: 600px) {
     .main {
         border-radius: 0px;
